# ECS

./: .gitignore  CMakeLists.txt
docs/: Doxyfile
include/: componentManager.h  componentManager.tpp  componentPool.h  componentPool.tpp  entityManager.h  scene.h  scene.tpp  system.h  types.h
src/: CMakeLists.txt  componentManager.cpp  entityManager.cpp  scene.cpp  test.cpp
tests/: CMakeLists.txt
